<resources>
    <string name="app_name">LinuxSync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_test">Test</string>
    <string name="menu_connection">Connection</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Trusted Devices</string>
    <string name="menu_send">Send</string>
    <string name="service_name">LinuxSync Notification Service</string>

    <string name="channel_name">NotificationChannel</string>
    <string name="channel_description">Testing Notif Channel</string>
    <string name="persistent_channel_name">PersistentNotification</string>
    <string name="persistent_channel_description">Channel for foreground service</string>
    <string name="persistent_channel_id">linuxsync_persistent</string>

    <string name="accept_connection_message">Accept the connection from %1$s? %1$s is not currently trusted.</string>

    <string name="placeholder">you shouldn\'t see this</string>

    <string name="permission_button_text">If you aren\'t receiving notifications when connected, check you have given the permission.</string>
    <string name="open_permission_intent">Open Notification Settings</string>
    <string name="send_test_notification">Send a test notification.</string>

    <string name="connected_time_elapsed">Time Elapsed: %1$s</string>
    <string name="connected_hostname">Hostname: %1$s</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="searching">Searching</string>

    <string name="enable_connections">Enable Connections</string>
    <string name="enable_connections_description">Enable devices to connect to your phone and receive notifications.
    Only one device can be connected at a time.</string>
    <string name="enable_automatic_connections">Enable Automatic Connections</string>
    <string name="enable_automatic_connections_description">Automatically allow connections when the app starts in the background.</string>

    <string name="remove">Remove</string>
    <string name="device_list">Trusted Device List</string>

    <string name="test_button">Send Test Notification</string>
    <string name="test_button_actions">Send a test notification with actions.</string>

    <string name="ok">OK</string>
    <string name="bluetooth_unsupported_message">This device does not support bluetooth.</string>
    <string name="device_unsupported">Device Unsupported</string>
    <string name="socket_failed">Socket Failed</string>
    <string name="hint_ip_address">IP Address</string>
    <string name="ip_address_text">IP: %1$s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="connected_counter">Connected: %1$d</string>
    <string name="hint_input_buffer">Data to send</string>
    <string name="Send">Send</string>

    <string name="prefs_trusted_devices">trusted_devices</string>
    <string name="prefs_settings">settings</string>
    <string name="setting_automatic_connections">automatic_connections_enabled</string>
    <string name="setting_use_protobuf">protobuf_enabled</string>
    <string name="setting_battery_updates">battery_updates_enabled</string>
    <string name="setting_use_rsa">rsa_enabled</string>

    <string name="add">Add Trusted Device</string>
    <string name="autoconnect_enabled_text">Autoconnect is %1$s</string>

    <string name="enable_protobuf_text">Enable Protobuf</string>
    <string name="protobuf_description">Use protobuf instead of the proprietary format. May not work with older versions of the client. (Recommended)</string>
    <string name="battery_updates_text">Battery Status Updates</string>
    <string name="battery_updates_description">Send notifications when the battery status changes (low charge, power connected, power disconnected, etc.)</string>
    <string name="rsa_encryption_text">Enable Encryption</string>
    <string name="encryption_description">Encrypt data when possible. May cause issues with older clients. (Recommended)</string>
    <string name="clear_description">Clear all trusted devices. This cannot be undone.</string>
    <string name="clear_button">Clear</string>

</resources>
