<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pw.byakuren.linuxsync.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_test"
        android:name="pw.byakuren.linuxsync.ui.notiftest.NotificationTestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/nav_bluetooth"
        android:name="pw.byakuren.linuxsync.ui.bluetooth.BluetoothFragment"
        android:label="@string/menu_bluetooth"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="pw.byakuren.linuxsync.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="pw.byakuren.linuxsync.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="pw.byakuren.linuxsync.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>