<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/text_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:text="@string/permission_button_text"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:justificationMode="inter_word" />

            <Button
                android:id="@+id/open_permission_button"
                android:text="@string/open_permission_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openNotificationSettings" />

            <TextView
                android:id="@+id/textView4"
                android:text="@string/send_test_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                android:text="@string/Send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendTestNotification" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>