<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/master_toggle"
            android:text="@string/ip_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundGravity="fill_horizontal"
            android:layout_gravity="fill_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="switchToggle" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/send_buffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:ems="10"
                android:hint="@string/hint_input_buffer"
                android:inputType="textPersonName"
                android:text="test"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buffer_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:onClick="writeToSocket"
                android:text="@string/Send" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>